# printall

./: .gitignore  README.md  app.py  pyproject.toml
